<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".EditProfile">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/etUsernameEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:text="@string/username"
        android:textAlignment="center"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_searchEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etdobEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        android:textAlignment="center"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etpasswordEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:text="@string/password"
        android:textAlignment="center"
        android:autofillHints="" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/btn_maleEP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/male"
            android:textAlignment="textStart" />

        <RadioButton
            android:id="@+id/btn_femaleEP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <Button
        android:id="@+id/btnEditEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnDeleteEP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>