<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.LolaCupCakeApplication.Advertisement">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="getBack"
        android:text="@string/back"
        android:textAlignment="textStart"
        android:textColor="#E31069"
        android:textSize="12sp"
        android:textStyle="normal" />
    <TextView
        android:id="@+id/devlry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/productTitle"
        android:textAlignment="center"
        android:textColor="#E31069"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/AdverticeID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/adverid"
        android:inputType="textPersonName" />
    <ImageView
        android:id="@+id/picAD"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/cupcake18" />

    <Button
        android:id="@+id/btnaddp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/add"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" />

    <Button
        android:id="@+id/btnViewp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/view"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" />

    <Button
        android:id="@+id/btnUpdatep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/updatenew" />

    <Button
        android:id="@+id/btnDeletep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/deletenew" />


    <Button
        android:id="@+id/btnFindp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/serachnew" />


</LinearLayout>