<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.LolaCupCakeApplication.SpecialProducts">

    <ScrollView
        android:id="@+id/homeScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ProductsAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <TextView
        android:id="@+id/textPopular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textAlignment="textStart"
        android:textColor="#E31069"
        android:textSize="12sp"
        android:onClick="getBack"
        android:textStyle="normal" />

            <TextView
                android:id="@+id/textSpecialTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/specialSS"
                android:textAlignment="center"
                android:textColor="#E31069"
                android:textSize="24sp"
                android:textStyle="bold" />

    <EditText
        android:id="@+id/txtIDp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/product_id"
        android:inputType="textPersonName"
        android:autofillHints=""
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />

    <EditText
        android:id="@+id/txtNamep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/product_name"
        android:inputType="textPersonName"
        android:autofillHints=""
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />

    <EditText
        android:id="@+id/txtPricep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/product_price"
        android:inputType="textPersonName"
        android:autofillHints=""
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        />

    <Spinner
        android:id="@+id/spinnerCp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:spinnerMode="dropdown"
        android:textAlignment="textStart"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        >

    </Spinner>

    <EditText
        android:id="@+id/txtDesp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/product_des"
        android:inputType="textMultiLine"
        android:lines="4"
        android:autofillHints=""
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>


    <ImageView
        android:id="@+id/pic1p"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/cupcake8" />

    <Button
        android:id="@+id/btnaddpp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/add"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" />

    <Button
        android:id="@+id/btnViewpp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/view"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" />


    <Button
        android:id="@+id/btnUpdatep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/updatenew" />

    <Button
        android:id="@+id/btnDeletep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/deletenew" />


    <Button
        android:id="@+id/btnFindp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/serachnew" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>